--- a/src/app/artboard/toolbox/toolbox.component.scss
+++ b/src/app/artboard/toolbox/toolbox.component.scss
@@ -16,8 +16,9 @@ button {
     border-radius: 8px;
     cursor: pointer;
     svg {
-        width: 100%;
-        height: 100%;
+        width: 85%;
+        aspect-ratio: 1/1;
+        object-fit: cover;
         fill: #919193;
     }
     &.active {
@@ -26,4 +27,10 @@ button {
             fill: #030064;
         }
     }
+}
+
+.space {
+    width: 1px;
+    background-color: #ccc;
+    margin: 0 4px;
 }
