--- a/src/app/artboard/artboard/artboard.component.html
+++ b/src/app/artboard/artboard/artboard.component.html
@@ -1,3 +1,7 @@
-<div class="grid"></div>
+<div class="canvas grid" (click)="onClick($event)">
+    <ng-container class="item" *ngFor="let item of items">
+        <app-item [style.left.px]="item.x" [style.top.px]="item.y" [style.background-color]="item.color"></app-item>
+    </ng-container>
+</div>
 <app-toolbox></app-toolbox>
 <app-library></app-library>
